--- a/store/blocks/product/product-summary.jsonc
+++ b/store/blocks/product/product-summary.jsonc
@@ -27,7 +27,7 @@
     "children": [
       "product-summary-image",
       "product-summary-name",
-      "product-rating-inline",
+      //"product-rating-inline", //mantafra rating
       "product-summary-price"
     ]
   },
