--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -3,11 +3,7 @@
     "alwaysStrict": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "lib": [
-      "es2017",
-      "dom",
-      "es2018.promise"
-    ],
+    "lib": ["es2017", "dom", "es2018.promise"],
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -21,21 +17,16 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "target": "es2017",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node"]
   },
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "include": [
     "./typings/*.d.ts",
     "./**/*.tsx",
     "./**/*.ts",
-    "components/Minicart/MinicartBar/index.tsx"
+    "components/Minicart/MinicartBar/index.tsx",
+    "components/MantaVisibilityConditionalHour/index.js"
   ],
   "typeAcquisition": {
     "enable": false
