--- a/manifest.json
+++ b/manifest.json
@@ -13,14 +13,6 @@
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
-  "peerDependencies": {
-    "beightone.buy-together-marketplace": "0.x",
-    "scalapay.scalapay-widget": "0.x",
-    "vtex.location-availability": "0.x",
-    "vtex.wish-list": "1.x",
-    "vtex.store-locator": "0.x",
-    "vtex.shopper-location": "1.x"
-  },
   "dependencies": {
     "vtex.css-handles": "1.x",
     "vtex.store": "2.x",
@@ -83,6 +75,15 @@
     "vtex.store-video": "1.x",
     "vtex.formatted-price": "0.x",
     "vtex.render-runtime": "8.x"
+  },
+  "peerDependencies": {
+    "beightone.buy-together-marketplace": "0.x",
+    "scalapay.scalapay-widget": "0.x",
+    "vtex.location-availability": "0.x",
+    "vtex.wish-list": "1.x",
+    "vtex.store-locator": "0.x",
+    "vtex.shopper-location": "1.x",
+    "bricobravo.reviews-and-ratings": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
