--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "bricobravo",
   "name": "store-theme",
-  "version": "5.0.37",
+  "version": "6.0.0",
   "builders": {
     "react": "3.x",
     "assets": "0.x",
@@ -74,8 +74,7 @@
     "vtex.modal-layout": "0.x",
     "vtex.store-video": "1.x",
     "vtex.formatted-price": "0.x",
-    "vtex.render-runtime": "8.x",
-    "bricobravo.reviews-and-ratings": "0.x"
+    "vtex.render-runtime": "8.x"
   },
   "peerDependencies": {
     "beightone.buy-together-marketplace": "0.x",
@@ -83,7 +82,8 @@
     "vtex.location-availability": "0.x",
     "vtex.wish-list": "1.x",
     "vtex.store-locator": "0.x",
-    "vtex.shopper-location": "1.x"
+    "vtex.shopper-location": "1.x",
+    "bricobravo.reviews-and-ratings": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
