--- a/store/blocks/header/searchBar.jsonc
+++ b/store/blocks/header/searchBar.jsonc
@@ -2,6 +2,7 @@
   "search-bar#desktop": {
     "blocks": ["autocomplete-result-list.v2"],
     "props": {
+      "htmlId": "header-searchbar-accela",
       "placeholder": "Cerca prodotto, brand…",
       "compactMode": false,
       "openAutocompleteOnFocus": true,
@@ -14,6 +15,7 @@
   "search-bar#mobile": {
     "blocks": ["autocomplete-result-list.v2"],
     "props": {
+      "htmlId": "header-searchbar-mob-accela",
       "compactMode": false,
       "placeholder": "Cerca prodotto, brand…",
       "autoFocus": false,
@@ -30,6 +32,7 @@
   "autocomplete-result-list.v2": {
     "blocks": ["product-summary.shelf#searchbar"],
     "props": {
+      "htmlId": "header-searchbar-accela2",
       "hideUnavailableItems": true,
       "simulationBehavior": "skip"
     }
