bug se lo compri ora..

--- a/store/blocks/header/minicart.jsonc
+++ b/store/blocks/header/minicart.jsonc
@@ -150,7 +150,8 @@
   },
   "minicart-checkout-button": {
     "props": {
-      "finishShoppingButtonLink": "/checkout/#/email"
+      //      "finishShoppingButtonLink": "/checkout/#/email"
+      "finishShoppingButtonLink": "/checkout/#/cart"
     }
   },
   "minicart-empty-state": {
